# SaaSMix

./: .gitignore  AGENT_PROMPT_PLAYBACK.md  AUDIO_PROCESSING_GUIDE.md  BACKEND_URLS_REFERENCE.md  CDN_OVH_GUIDE.md  CUSTOM_DOMAIN.md  DEMARRAGE_RAPIDE.md  DEPLOYMENT_WORKFLOW.md  DIAGNOSTIC_MIX_LENT.md  IMPLEMENTATION_NEXT.md  INDEXING.md  MIGRATION_RISE_M_ETAPE1_INSTALL.md  MIGRATION_RISE_M_ETAPE2.md  MIGRATION_VPS_TO_RISE_M.md  OU_ON_EN_EST.md  PAYMENT_IMPLEMENTATION.md  PLUGINS.txt  PRICING.md  PRODUCTION-VS-STAGING.md  PRODUCT_UX_SPEC.md  PROJECT_GUIDE.md  QUICK_TEST_GUIDE.md  README.md  SEO_KEYWORDS.md  SETUP_INSTRUCTIONS.md  STAGING_AND_TESTING.md  TESTING_GUIDE.md  netlify.toml  prepare_vps_deploy.ps1
.cursor/rules/: powershell-copy-paste.mdc  (+2 more)
acquisition/: CHECKLIST_PHASE1.md  CHECKLIST_PHASE2.md  CHECKLIST_PHASE3.md  CHECKLIST_REDDIT_FORUMS.md  PLAYBOOK.md
backend/: .env.example  223_PAIRS_QUALITY.md  AUDIO_QUALITY_OPTIONS.md  AUTOTUNE_DECISION.md  AUTOTUNE_STRATEGY.md  BEGINNER_GUIDE.md  BEST_TRAINING_STRATEGY.md  BUILD_LINUX.md  CHAINE_EFFETS_ORDRE.md  COLAB_CELLS_REINSTALL.md  COLAB_CELLS_STEP_BY_STEP.md  COLAB_CREATE_USER_CONFIGS.py  COLAB_DATASET_FIX.md  COLAB_DIFF_MST_COMPLETE.md  COLAB_FIX.md  COLAB_FIX_EXTRACTION.md  COLAB_INFERENCE_SONG1.py  COLAB_NOTEBOOK.md  COLAB_NOTEBOOK_DIFF_MST.ipynb  COLAB_RELANCE_APRES_DECO.md  COLAB_RESTART_QUICK.md  COLAB_SLEEP_SAFE.md  COMMERCIAL_PRODUCT_DATASET.md  DATASET_PREPARATION.md  DATASET_PREPARATION_GUIDE.md  DATA_COLLECTION_GUIDE.md  DATA_PREPARATION_CHECKLIST.md  DEEPAFX_ST_COLAB_AS_CREATORS.md  DEEPAFX_ST_COLAB_INSTALL_FIX.py  DEEPAFX_ST_COLAB_TOUT_COPIER_COLLER.md  DEEPAFX_ST_LIGHTNING_WEIGHTS_ONLY_PATCH.md  DEEPAFX_ST_PROCESS_FIX.md  DEEPAFX_ST_RESUME.md  DEEPAFX_ST_SAAS_GUIDE.md  DEEPAFX_ST_TEST_CHECKPOINTS_COLAB.md  DEEPAFX_ST_TRAINING_GUIDE.md  DEEPAFX_ST_TRAINING_MIX_SAAS.md  DEEPAFX_ST_TRAIN_STYLE_PL2_FIX.md  DEPLOY_WINDOWS.md  DIAGNOSTIC_DATASET.md  (+88 more)
frontend/: README.md  font-base64-400.txt  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
hise_vst3_host/: CMakeLists.txt  README.md  main.cpp
scripts/: build_logo_black.py
(+82 files in other folders)
